# agentibridge

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.allinone  LICENSE  README.md  SECURITY.md  _config.yml  agentibridge.env.example  docker-compose.yml  index.md  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: build-audit-prompt.py
.github/workflows/: build.yml  claude.yml  dev-build.yml  docker-publish.yml  docs-audit.yml  e2e-smoke.yml  helm-publish.yml  pages.yml  publish-pypi.yml  release.yml  sonar-scan.yml  test.yml
_includes/: head-custom.html
_sass/custom/: custom.scss
agentibridge/: __init__.py  __main__.py  catalog.py  claude_runner.py  cli.py  collector.py  completions.py  config.py  dispatch.py  dispatch_bridge.py  embeddings.py  llm_client.py  logging.py  oauth_provider.py  parser.py  pg_client.py  plans.py  redis_client.py  registry.py  server.py  store.py  transport.py
agentibridge/data/: .env.example  agentibridge.env.example  docker-compose.yml  docker.env.example
agentic_bridge/: __init__.py  __main__.py  cli.py  collector.py  completions.py  config.py  dispatch.py  embeddings.py  logging.py  oauth_provider.py  parser.py  redis_client.py  server.py  store.py  transport.py
automation/: cloudfared.sh  compose.sh
charts/agentibridge/: Chart.yaml  values.yaml
deploy/: agentibridge-native.service  agentibridge.service  agentic-bridge-native.service  agentic-bridge.service  supervisord.conf
docs/: cloudflare-tunnel.md  connecting-clients.md  examples.md  index.md  phase2-semantic-search.md  phase3-remote-access.md  phase4-dispatch.md  reverse-proxy.md
docs/architecture/: index.md  internals.md  knowledge-catalog.md  remote-access.md  semantic-search.md  session-dispatch.md
docs/deployment/: cloudflare-tunnel.md  index.md  releases.md  reverse-proxy.md
docs/getting-started/: connecting-clients.md  index.md
docs/reference/: cli-commands.md  configuration.md  index.md  troubleshooting.md
draft/: KNOWN_TEST_FAILURES.md
scripts/: daemon.py
tests/: conftest.py  test_docker.py
tests/e2e/: test_mcp_smoke.sh
tests/fixtures/: malformed_transcript.jsonl  sample_transcript.jsonl
tests/integration/: conftest.py  test_docker.py
tests/stress/: test_concurrent_access.py  (+1 more)
(+23 files in other folders)
