[project]
name = "agentic-bridge"
version = "0.1.0"
description = "Claude CLI transcript indexer and MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "redis>=7.0",
    "uvicorn[standard]>=0.30",
    "httpx>=0.25",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "numpy",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentic_bridge*"]
