[project]
name = "agentibridge"
version = "0.2.0"
description = "Claude CLI transcript indexer and MCP server"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0",
    "redis>=7.0",
    "uvicorn[standard]>=0.30",
    "httpx>=0.25",
    "anthropic>=0.40",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.21",
    "numpy",
    "ruff>=0.4",
]

[project.scripts]
agentibridge = "agentibridge.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentibridge*"]

[tool.setuptools.package-data]
agentibridge = ["data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: no external deps",
    "integration: requires Docker",
    "stress: large data",
]

[tool.ruff]
target-version = "py312"
line-length = 120
